AGREGANDO README DE ENDPOINTS

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,12 @@ spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=efrain
 spring.datasource.password=efrain13
 
-server.port=7777
+server.port=7676
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
+
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.xhtml
